Bug 164694 - FILESAVE DOCX Year in date picker not displayed in Word/Writer after RT
Summary: FILESAVE DOCX Year in date picker not displayed in Word/Writer after RT
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
6.4.0.3 release
Hardware: All All
: medium normal
Assignee: Aron Budea
URL:
Whiteboard: target:26.8.0 target:26.2.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Content_Control
  Show dependency treegraph
 
Reported: 2025-01-14 01:33 UTC by Aron Budea
Modified: 2026-04-03 07:21 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Original document as shown in MS Word for reference (40.50 KB, image/png)
2025-01-14 01:33 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2025-01-14 01:33:24 UTC
Created attachment 198518 [details]
Original document as shown in MS Word for reference

Using the simplified reproducer from bug 153097, attachment 184770 [details]:
- convert the file to DOCX with 'instdir/program/soffice --headless --convert-to docx simplifier.docx --outdir <folder>'
- open result in MS Word.

=> The year in the header is empty (shows the placeholder), should be '2011'.

Note that when saving with LO in Linux (or recently in Windows), there is a problem with the text as well ('Volunteer Instructions and Count Form'), that issue is tracked in bug 153097.

Observed in 25.8.0.0.alpha0+ (72df5a6fdf3e14d9994ebd1de269ab712136a27a) / Windows.
This went bad in a number of steps, eg. bug 153097's screenshot of a file created with LO 7.6, attachment 184761 [details] shows '2[Year]'.

1. Before 6.4, it was okay, but when the file is simply opened in LO, the field isn't a date picker.

2. After the following commit in 6.4, the header text 'Volunteer Instructions and Count Form' is duplicated, the date picker is still there, but very small (maybe this didn't affect the date picker).
https://cgit.freedesktop.org/libreoffice/core/commit/?id=a50d82eca96d04b4cea1ea2c7b3610bf9ed951f0
author		Tamás Zolnai <tamas.zolnai@collabora.com>	2019-07-03 19:57:19 +0200
committer	Tamás Zolnai <tamas.zolnai@collabora.com>	2019-07-12 07:04:49 +0200

"MSForms: DOCX filter: The new text-based date field is allowed in the header."

3. A few commits later in 6.4, the year in the date picker looks OK, but clicking into it reveals that only '011' is part of the date picker, '2' isn't.
https://cgit.freedesktop.org/libreoffice/core/commit/?id=68e1be4ccbb90ee9a788962219a88312c4ffbea2
author		Tamás Zolnai <tamas.zolnai@collabora.com>	2019-07-10 18:22:31 +0200
committer	Tamás Zolnai <tamas.zolnai@collabora.com>	2019-07-12 12:55:40 +0200

"MSForms: Rework text-based date form field's representation"

4. After this change in 7.4 (and its 7.3 backport), date picker shows '2' outside the year field, and in smaller characters '2011' inside the year field.
https://cgit.freedesktop.org/libreoffice/core/commit/?id=41a9ff8d9ef6e0dbb4a71b0f923079eb8ffd1851
author		Vasily Melenchuk <vasily.melenchuk@cib.de>	2021-11-18 20:06:08 +0300
committer	Vasily Melenchuk <vasily.melenchuk@cib.de>	2021-12-02 21:16:01 +0100

"sw: support for other sdt attributes roundtrip in datepicker"

5. After this commit in 7.4, the date picker now shows '2[Year]'.
https://cgit.freedesktop.org/libreoffice/core/commit/?id=fafe00bb7d72d6d4bec663b40a4cd92e50f33f0f
author		Caolán McNamara <caolanm@redhat.com>	2022-08-06 15:35:29 +0100
committer	Xisco Fauli <xiscofauli@libreoffice.org>	2022-08-08 11:21:00 +0200

"crashtesting: keep a reference to the passed in LibXSLTTransformer"

6. And finally, after the following commit in 7.6, and its 7.5.4 backport, the '2[Year]', becomes '[Year]':
https://cgit.freedesktop.org/libreoffice/core/commit/?id=e898f95bfab16ddd9b04e516293cb6eb7e0a3847
author		Czeber László Ádám <czeber.laszloadam@nisz.hu>	2023-04-18 15:01:14 +0200
committer	László Németh <nemeth@numbertext.org>	2023-04-26 10:55:29 +0200

tdf#138093 DOCX import: fix broken date selector control in table
Comment 1 Aron Budea 2026-02-19 05:35:41 UTC
Now the date is displayed correctly in Word, but is shown as 1905 in Writer when reopening the roundtripped file.

Both happenede with the following commit for bug 169101.

https://git.libreoffice.org/core/commit/e12c061dbf1330b00cdc73b7691171b6af883764
author		Justin Luth <justin.luth@collabora.com>	Thu Feb 12 16:40:44 2026 -0500
committer	Justin Luth <justin.luth@collabora.com>	Fri Feb 13 02:07:13 2026 +0100

tdf#169101 docx export: create a _rels for customXml/item1.xml
Comment 2 Commit Notification 2026-03-20 05:32:49 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/41c400c577207dbdf73640b6e6eed2f685971342

tdf#164694 content control: import data-bound 4-digit year as proper date

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2026-04-03 07:21:50 UTC
Aron Budea committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/ff75436c42ae93cbb3164a6d2392db3de96f15b1

tdf#164694 content control: import data-bound 4-digit year as proper date

It will be available in 26.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.