tdf#164694 content control: import data-bound 4-digit year as proper date

Otherwise it's treated as number, and eg. year 2011
becomes 2011 days from start of epoch: 1905.
Could be seen in date picker and when exported to DOCX.

Clashing values:
- word/headerX.xml: <w:date w:fullDate="2011-01-01T00:00:00Z">
- customXml/item1.xml: <PublishDate>2011</PublishDate>

On data binding, custom XML element takes priority.

Change-Id: I222f20bdc69fee3571859d408ee74de95d5c092f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/201921
Tested-by: Jenkins
Reviewed-by: Aron Budea <aron.budea@collabora.com>
(cherry picked from commit 41c400c577207dbdf73640b6e6eed2f685971342)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/202681
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>